--- a/notebooks/demographic_embeddings.ipynb
+++ b/notebooks/demographic_embeddings.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "95209256",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "52abcde1",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "ffa9933b",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "4dbb8b2b",
    "metadata": {
     "scrolled": true
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "9591b51e",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "30845395",
    "metadata": {
     "scrolled": true
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "549e10eb",
    "metadata": {},
    "outputs": [],
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "99cc3137",
    "metadata": {
     "scrolled": true
@@ -266,7 +266,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 377095 entries, 0 to 377094\n",
-      "Data columns (total 26 columns):\n",
+      "Data columns (total 29 columns):\n",
       " #   Column                                      Non-Null Count   Dtype  \n",
       "---  ------                                      --------------   -----  \n",
       " 0   subject_id                                  377095 non-null  int64  \n",
@@ -288,15 +288,18 @@
       " 16  dicom_id                                    377095 non-null  object \n",
       " 17  PerformedProcedureStepDescription           341588 non-null  object \n",
       " 18  ViewPosition                                361326 non-null  object \n",
-      " 19  Rows                                        377095 non-null  int64  \n",
-      " 20  Columns                                     377095 non-null  int64  \n",
-      " 21  StudyDate                                   377095 non-null  int64  \n",
+      " 19  Rows                                        377095 non-null  float64\n",
+      " 20  Columns                                     377095 non-null  float64\n",
+      " 21  StudyDate                                   377095 non-null  float64\n",
       " 22  StudyTime                                   377095 non-null  float64\n",
       " 23  ProcedureCodeSequence_CodeMeaning           377095 non-null  object \n",
       " 24  ViewCodeSequence_CodeMeaning                360598 non-null  object \n",
       " 25  PatientOrientationCodeSequence_CodeMeaning  335930 non-null  object \n",
-      "dtypes: float64(15), int64(5), object(6)\n",
-      "memory usage: 77.7+ MB\n"
+      " 26  StudyDateForm                               377095 non-null  object \n",
+      " 27  StudyTimeForm                               377095 non-null  object \n",
+      " 28  cxrtime                                     377095 non-null  object \n",
+      "dtypes: float64(18), int64(2), object(9)\n",
+      "memory usage: 86.3+ MB\n"
      ]
     }
    ],
@@ -314,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "ce090ae9",
    "metadata": {},
    "outputs": [],
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "ad3fb6a5",
    "metadata": {
     "scrolled": true
@@ -336,7 +339,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 3227874 entries, 0 to 3227873\n",
-      "Data columns (total 56 columns):\n",
+      "Data columns (total 59 columns):\n",
       " #   Column                                      Dtype  \n",
       "---  ------                                      -----  \n",
       " 0   subject_id                                  int64  \n",
@@ -388,14 +391,17 @@
       " 46  dicom_id                                    object \n",
       " 47  PerformedProcedureStepDescription           object \n",
       " 48  ViewPosition                                object \n",
-      " 49  Rows                                        int64  \n",
-      " 50  Columns                                     int64  \n",
-      " 51  StudyDate                                   int64  \n",
+      " 49  Rows                                        float64\n",
+      " 50  Columns                                     float64\n",
+      " 51  StudyDate                                   float64\n",
       " 52  StudyTime                                   float64\n",
       " 53  ProcedureCodeSequence_CodeMeaning           object \n",
       " 54  ViewCodeSequence_CodeMeaning                object \n",
       " 55  PatientOrientationCodeSequence_CodeMeaning  object \n",
-      "dtypes: float64(16), int64(11), object(29)\n",
+      " 56  StudyDateForm                               object \n",
+      " 57  StudyTimeForm                               object \n",
+      " 58  cxrtime                                     object \n",
+      "dtypes: float64(19), int64(8), object(32)\n",
       "memory usage: 1.4+ GB\n"
      ]
     }
@@ -406,8 +412,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "9a7eeefb",
+   "execution_count": 23,
+   "id": "edd0872b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_embeddings = ['anchor_age', 'gender', 'ethnicity', 'marital_status', 'language', 'insurance']\n",
+    "\n",
+    "for i in range (len(demo_embeddings)):\n",
+    "      \n",
+    "    df_core_icu_cxr_fusion['de_'+str(i)] = df_core_icu_cxr_fusion[demo_embeddings[i]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2d15a105",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "df_core_icu_cxr_fusion['death_status'] = np.where(df_core_icu_cxr_fusion['discharge_location'] == 'DIED' ,1,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "441a39da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_core_icu_cxr_fusion = df_core_icu_cxr_fusion.drop(['anchor_age', 'gender', 'ethnicity', 'marital_status', 'language', 'insurance'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "da4a5fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_core_icu_cxr_fusion = df_core_icu_cxr_fusion.drop(['discharge_location'], axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "32702f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_core_icu_cxr_fusion = df_core_icu_cxr_fusion.loc[: , ['subject_id', 'hadm_id', 'stay_id', 'de_0', 'de_1', 'de_2', 'de_3', 'de_4',\n",
+    "       'de_5', 'admittime', 'dischtime', 'deathtime',\n",
+    "       'admission_type', 'admission_location', 'discharge_location',\n",
+    "       'edregtime', 'edouttime', 'hospital_expire_flag', 'anchor_year',\n",
+    "       'anchor_year_group', 'dod', 'transfer_id', 'eventtype', 'careunit',\n",
+    "       'intime_x', 'outtime_x', 'first_careunit', 'last_careunit',\n",
+    "       'intime_y', 'outtime_y', 'los', 'study_id', 'Atelectasis',\n",
+    "       'Cardiomegaly', 'Consolidation', 'Edema', 'Enlarged Cardiomediastinum',\n",
+    "       'Fracture', 'Lung Lesion', 'Lung Opacity', 'No Finding',\n",
+    "       'Pleural Effusion', 'Pleural Other', 'Pneumonia', 'Pneumothorax',\n",
+    "       'Support Devices', 'dicom_id', 'PerformedProcedureStepDescription',\n",
+    "       'ViewPosition', 'Rows', 'Columns', 'StudyDate', 'StudyTime',\n",
+    "       'ProcedureCodeSequence_CodeMeaning', 'ViewCodeSequence_CodeMeaning',\n",
+    "       'PatientOrientationCodeSequence_CodeMeaning', 'StudyDateForm',\n",
+    "       'StudyTimeForm', 'cxrtime']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "cdf90aae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_core_icu_cxr_fusion = df_core_icu_cxr_fusion.loc[: , ['subject_id', 'hadm_id', 'stay_id', 'de_0', 'de_1', 'de_2', 'de_3',\n",
+    "       'de_4', 'de_5', 'death_status', 'admittime', 'dischtime', 'deathtime', 'admission_type',\n",
+    "       'admission_location', 'edregtime', 'edouttime', 'hospital_expire_flag',\n",
+    "       'anchor_year', 'anchor_year_group', 'dod', 'transfer_id', 'eventtype',\n",
+    "       'careunit', 'intime_x', 'outtime_x', 'first_careunit', 'last_careunit',\n",
+    "       'intime_y', 'outtime_y', 'los', 'study_id', 'Atelectasis',\n",
+    "       'Cardiomegaly', 'Consolidation', 'Edema', 'Enlarged Cardiomediastinum',\n",
+    "       'Fracture', 'Lung Lesion', 'Lung Opacity', 'No Finding',\n",
+    "       'Pleural Effusion', 'Pleural Other', 'Pneumonia', 'Pneumothorax',\n",
+    "       'Support Devices', 'dicom_id', 'PerformedProcedureStepDescription',\n",
+    "       'ViewPosition', 'Rows', 'Columns', 'StudyDate', 'StudyTime',\n",
+    "       'ProcedureCodeSequence_CodeMeaning', 'ViewCodeSequence_CodeMeaning',\n",
+    "       'PatientOrientationCodeSequence_CodeMeaning', 'StudyDateForm',\n",
+    "       'StudyTimeForm', 'cxrtime']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "235e62dd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['subject_id', 'hadm_id', 'stay_id', 'de_0', 'de_1', 'de_2', 'de_3',\n",
+       "       'de_4', 'de_5', 'death_status', 'admittime', 'dischtime', 'deathtime',\n",
+       "       'admission_type', 'admission_location', 'edregtime', 'edouttime',\n",
+       "       'hospital_expire_flag', 'anchor_year', 'anchor_year_group', 'dod',\n",
+       "       'transfer_id', 'eventtype', 'careunit', 'intime_x', 'outtime_x',\n",
+       "       'first_careunit', 'last_careunit', 'intime_y', 'outtime_y', 'los',\n",
+       "       'study_id', 'Atelectasis', 'Cardiomegaly', 'Consolidation', 'Edema',\n",
+       "       'Enlarged Cardiomediastinum', 'Fracture', 'Lung Lesion', 'Lung Opacity',\n",
+       "       'No Finding', 'Pleural Effusion', 'Pleural Other', 'Pneumonia',\n",
+       "       'Pneumothorax', 'Support Devices', 'dicom_id',\n",
+       "       'PerformedProcedureStepDescription', 'ViewPosition', 'Rows', 'Columns',\n",
+       "       'StudyDate', 'StudyTime', 'ProcedureCodeSequence_CodeMeaning',\n",
+       "       'ViewCodeSequence_CodeMeaning',\n",
+       "       'PatientOrientationCodeSequence_CodeMeaning', 'StudyDateForm',\n",
+       "       'StudyTimeForm', 'cxrtime'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_core_icu_cxr_fusion.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "67a4e742",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20245"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_core_icu_cxr_fusion['subject_id'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "7991d1f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
