--- a/notebooks/Generate Time Series Embeddings v1.ipynb
+++ b/notebooks/Generate Time Series Embeddings v1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9715ee6e",
+   "id": "94acb2c7",
    "metadata": {},
    "source": [
     "# Create chart events features for patient cohort"
@@ -761,16 +761,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22a252a",
+   "id": "9dcce374",
    "metadata": {},
    "source": [
-    "### Concatenate chart events fusion features horizontally"
+    "### Concatenate chart events fusion features"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "445ce26e",
+   "id": "1f3dc16a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +780,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e0493e57",
+   "id": "1cba15b7",
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b010ad46",
+   "id": "400dff86",
    "metadata": {},
    "source": [
     "# Create lab events features for patient cohort"
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "48921e0f",
+   "id": "8e9a87bd",
    "metadata": {
     "scrolled": true
    },
@@ -1367,16 +1367,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66b6c20e",
+   "id": "8fb5e040",
    "metadata": {},
    "source": [
-    "### Concatenate lab events fusion features horizontally"
+    "### Concatenate lab events fusion features"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aeed0e6e",
+   "id": "e4dee526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "928f6561",
+   "id": "c0f58e4b",
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae71eed",
+   "id": "c3fccc51",
    "metadata": {},
    "source": [
     "# Create procedure events features for patient cohort"
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfb7ccce",
+   "id": "c3204a19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a348e0c",
+   "id": "36d4441a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8215cbe8",
+   "id": "9fd8fa60",
    "metadata": {},
    "source": [
     "# Concatenate fusion features horizontally for all patients"
@@ -1553,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a7b2f850",
+   "id": "28ee10e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ee6ef660",
+   "id": "e515ff4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "75172bbb",
+   "id": "d1f0ea8d",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "91e394bb",
+   "id": "7af11553",
    "metadata": {},
    "outputs": [],
    "source": [
