--- a/notebooks/icu_cxr_patients.ipynb
+++ b/notebooks/icu_cxr_patients.ipynb
@@ -2,15 +2,43 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "70703480",
+   "metadata": {},
+   "source": [
+    "# ICU CXR Patients"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "32a5c2f4",
+   "metadata": {},
+   "source": [
+    "In this notebook, the goal is to find the patients that have both icu and cxr data.\n",
+    "\n",
+    "We start by reading the following data sources:\n",
+    "\n",
+    "- mimic_cxr_chexpert : the file containing all patients with a chest pathology measurements, meaning those who have a chest radiology image\n",
+    "\n",
+    "\n",
+    "\n",
+    "- icustays : the file containing all patients with an icu stay, meaning those who have a stay_id in the icustays table\n",
+    "\n",
+    "\n",
+    "Then, we find the intersection between the two datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fdd52343",
    "metadata": {},
    "source": [
-    "imports"
+    "### Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "205e6e40",
    "metadata": {},
    "outputs": [],
@@ -31,12 +59,12 @@
    "id": "508c86c1",
    "metadata": {},
    "source": [
-    "read data from local source"
+    "### Read data from local source"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "257f98ef",
    "metadata": {},
    "outputs": [],
@@ -47,83 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6e493568",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 227827 entries, 0 to 227826\n",
-      "Data columns (total 16 columns):\n",
-      " #   Column                      Non-Null Count   Dtype  \n",
-      "---  ------                      --------------   -----  \n",
-      " 0   subject_id                  227827 non-null  int64  \n",
-      " 1   study_id                    227827 non-null  int64  \n",
-      " 2   Atelectasis                 57666 non-null   float64\n",
-      " 3   Cardiomegaly                66799 non-null   float64\n",
-      " 4   Consolidation               23076 non-null   float64\n",
-      " 5   Edema                       65833 non-null   float64\n",
-      " 6   Enlarged Cardiomediastinum  21837 non-null   float64\n",
-      " 7   Fracture                    5831 non-null    float64\n",
-      " 8   Lung Lesion                 8287 non-null    float64\n",
-      " 9   Lung Opacity                58425 non-null   float64\n",
-      " 10  No Finding                  75455 non-null   float64\n",
-      " 11  Pleural Effusion            87272 non-null   float64\n",
-      " 12  Pleural Other               2902 non-null    float64\n",
-      " 13  Pneumonia                   59185 non-null   float64\n",
-      " 14  Pneumothorax                53848 non-null   float64\n",
-      " 15  Support Devices             70281 non-null   float64\n",
-      "dtypes: float64(14), int64(2)\n",
-      "memory usage: 27.8 MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_mimic_cxr_chexpert.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "f9c4cb21",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 76540 entries, 0 to 76539\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   subject_id      76540 non-null  int64  \n",
-      " 1   hadm_id         76540 non-null  int64  \n",
-      " 2   stay_id         76540 non-null  int64  \n",
-      " 3   first_careunit  76540 non-null  object \n",
-      " 4   last_careunit   76540 non-null  object \n",
-      " 5   intime          76540 non-null  object \n",
-      " 6   outtime         76540 non-null  object \n",
-      " 7   los             76540 non-null  float64\n",
-      "dtypes: float64(1), int64(3), object(4)\n",
-      "memory usage: 4.7+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_icustays.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "4f4ebe5d",
    "metadata": {},
    "outputs": [
@@ -131,20 +83,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The number of patients with a chest radiology image is:\n",
       "65379\n",
+      "The number of patients with an icu stay is:\n",
       "53150\n"
      ]
     }
    ],
    "source": [
+    "print('The number of patients with a chest radiology image is:')\n",
+    "\n",
     "print(len(df_mimic_cxr_chexpert[\"subject_id\"].unique()))\n",
+    "\n",
+    "print('The number of patients with an icu stay is:')\n",
     "\n",
     "print(len(df_icustays[\"subject_id\"].unique()))\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b748e0c",
+   "metadata": {},
+   "source": [
+    "### Find the intersection between the two datasets:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2470065b",
    "metadata": {},
    "outputs": [],
@@ -154,28 +120,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "42e62d66",
+   "execution_count": 10,
+   "id": "caf312de",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of patients with both a chest radiology image and an icu stay is:\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(20245,)"
+       "20245"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "icu_cxr_patients.shape\n"
+    "print('The number of patients with both a chest radiology image and an icu stay is:')\n",
+    "\n",
+    "len(icu_cxr_patients)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b20947c",
+   "metadata": {},
+   "source": [
+    "### Saving the result to a csv file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "aed977b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "icu_cxr_patients.to_csv(\"csvs/icu_cxr_patients.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acd9ff62",
+   "metadata": {},
+   "source": [
+    "### Selecting a cohort of 10 patients and saving the result to a csv file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3687c1a3",
+   "metadata": {},
+   "source": [
+    "This cohort can be used for the tests and embeddings generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "71d970cd",
    "metadata": {},
    "outputs": [],
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "6f74f12b",
    "metadata": {},
    "outputs": [
@@ -205,7 +214,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
