--- a/notebooks/Generate Embeddings.ipynb
+++ b/notebooks/Generate Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "768833fb",
+   "id": "621980d0",
    "metadata": {},
    "source": [
     "The goal of this notebook is to use the methods in the module ```extraction_classes.py``` and the datasources in ```csv``` to generate demographic and time series embeddings.\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa11f163",
+   "id": "f10205ba",
    "metadata": {},
    "source": [
     "Start by creating an empty list that will be filled with the extracted features for chart events:"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dccadfe",
+   "id": "540f290d",
    "metadata": {},
    "source": [
     "Concatenate features along the 0 axis for all patients:"
@@ -110,10 +110,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f42c5f3",
+   "id": "9a2946bf",
    "metadata": {},
    "source": [
-    "Start by creating an empty list that will be filled with the extracted features for chart events:"
+    "Start by creating an empty list that will be filled with the extracted features for lab events:"
    ]
   },
   {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e148cb8",
+   "id": "8a30ab16",
    "metadata": {},
    "source": [
     "Concatenate features along the 0 axis for all patients:"
@@ -168,10 +168,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da3a60b2",
+   "id": "bfb1e8f6",
    "metadata": {},
    "source": [
-    "Start by creating an empty list that will be filled with the extracted features for chart events:"
+    "Start by creating an empty list that will be filled with the extracted features for procedure events:"
    ]
   },
   {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dce1bb1",
+   "id": "669a906d",
    "metadata": {},
    "source": [
     "### Concatenate procedure events fusion features"
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f077d725",
+   "id": "3d994c11",
    "metadata": {},
    "source": [
     "Concatenate features along the 0 axis for all patients:"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d0484f",
+   "id": "9e55c476",
    "metadata": {},
    "source": [
     "## Create demographic features for patient cohort"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc1211e",
+   "id": "b553c8bd",
    "metadata": {},
    "source": [
     "Create and object `Demographic_extraction` and call medthod `extract_demographics` :"
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba5a6434",
+   "id": "a2cc3125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96799901",
+   "id": "262d99dd",
    "metadata": {},
    "source": [
     "Filter dataframe using patients in the `cohort`:"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475367b1",
+   "id": "613e680b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f26c0c",
+   "id": "19f1f66f",
    "metadata": {},
    "source": [
     "Concatenate the generated dataframes to combine  all features"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00fdae7a",
+   "id": "13d184ca",
    "metadata": {},
    "source": [
     "Rename the genarated dataframe index for the purpose of exporting to csv:"
