--- a/notebooks/Vision_embeddings_V2.ipynb
+++ b/notebooks/Vision_embeddings_V2.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Imports"
+        "#### Imports :"
       ],
       "metadata": {
         "id": "6hD8J1ti1jnw"
