--- a/notebooks/extract_vision_features.ipynb
+++ b/notebooks/extract_vision_features.ipynb
@@ -78,7 +78,7 @@
     "- vision dense embeddings\n",
     "- vision predictions embeddings\n",
     "\n",
-    "For further details, please refer to : https://github.com/mlmed/torchxrayvision"
+    "For further details, please refer to : https://github.com/mlmed/torchxrayvision/blob/0eafebf36a3f5f30302dff0faaacef5e52243e87/scripts/process_image.py"
    ]
   },
   {
