--- a/notebooks/tutorials/Demographics_TimeSeries_features_Tutorial.ipynb
+++ b/notebooks/tutorials/Demographics_TimeSeries_features_Tutorial.ipynb
@@ -277,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df.drop_duplicates(subset=['brand'])\n",
+    "#df.drop_duplicates(subset=['subject_id'])\n",
     "\n",
     "demographics_fusion = demographics_fusion.drop_duplicates(subset=['subject_id'])"
    ]
